welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:6: error: not found: value baissebrosse
    baissebrosse()
    ^SlugHunting:8: error: not found: value levebrosse
    levebrosse()
    ^