welcome.lessons.welcome.methods.slug.SlugHunting.scala.code
def hunt() {  
  while (!isFacingTrail()){ 
    droite()}
  if (isFacingTrail()){
    baissebrosse()
    avance()
    levebrosse()
  }
  
}

def isFacingTrail():Boolean = {
  if (!estFaceMur){
    avance()  
  	if (getCouleurSol()==Color.green){
      recule()
      return true
    }
  	else {
      recule()
      return false
    }
  }
 	else {
    return false
  }
}